feat: Change names of puppyListFull to PuppyList and PuppyList to PuppyOne. feat: Replace # hfef to url_for messages for edit and delete.

--- a/puppy/Templates/layout.html
+++ b/puppy/Templates/layout.html
@@ -32,7 +32,7 @@
             <li><a href="#">About</a></li>
           </ul>
           <ul class="pull-right">
-            <li><a href="{{url_for('puppyListFull')}}">Puppies</a></li>
+            <li><a href="{{url_for('puppyList')}}">Puppies</a></li>
             <li><a href="#">Shelters</a></li>
             <li><a href="#">Owners</a></li>
           </ul>
