--- a/puppy/Templates/puppyadd.html
+++ b/puppy/Templates/puppyadd.html
@@ -36,7 +36,7 @@
 		<input type = 'submit' value = 'Create'> 
   	</div>
   	<div class="form-group">
-		<a href="{{url_for('puppyListFull')}}">Cancel<a>
+		<a href="{{url_for('puppyList')}}">Cancel<a>
   	</div>
   </div>
 </form>
