--- a/puppy/Templates/puppydelete.html
+++ b/puppy/Templates/puppydelete.html
@@ -15,7 +15,7 @@
   	</div>
 
   	<div class="form-group">
-    	<a href='{{ url_for('puppyList', puppy_id = deletePuppy.id) }}' class="btn btn-info" role="button">Cancel</a> 
+    	<a href='{{ url_for('puppyOne', puppy_id = deletePuppy.id) }}' class="btn btn-info" role="button">Cancel</a> 
   	</div>
 
  	</form>
