--- a/puppy/Templates/index.html
+++ b/puppy/Templates/index.html
@@ -5,7 +5,7 @@
       <div class="container">
         <h1 class="text-right">Adopt a puppy.</h1>
         <p class="text-right">Make a new friend.</p>
-        <p class="text-right"><a href="{{url_for('PuppiesHome')}}">Search for a puppy now.</a></p>
+        <p class="text-right"><a href="{{url_for('puppyList', page = 1)}}">Search for a puppy now.</a></p>
       </div>
     </div> 
 {% endblock %}
