--- a/puppy/Templates/layout.html
+++ b/puppy/Templates/layout.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-md-2">
                      <div class="thumbnail">
-                        <img src="http://sellingrenoandsparks.com/image_store/uploads/5/7/9/9/1/ar123638524119975.jpg" width=100px>
+                        <img src="http://sellingrenoandsparks.com/image_store/uploads/5/7/9/9/1/ar123638524119975.jpg" width=60px>
                     </div>
                 </div>
                 <div class="col-md-10">
@@ -40,7 +40,7 @@
       </div>
 
     <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
+    <div class="footer" id="footer">
       {% block footer %}
       &copy; Copyright 2015 by <a href="http://domain.invalid/">Greg Quinlan</a>.
       {% endblock %}
