--- a/puppy/Templates/puppyedit.html
+++ b/puppy/Templates/puppyedit.html
@@ -36,7 +36,7 @@
 		<input type = 'submit' value = 'Create'> 
   	</div>
   	<div class="form-group">
-		<a href="{{url_for('puppyList', puppy_id=editItem.id)}}">Cancel<a>
+		<a href="{{url_for('puppyOne', puppy_id=editItem.id)}}">Cancel<a>
   	</div>
   </div>
 </form>
