feat: Add shelterList to layout.html nav and improve shelterlist.html layout

--- a/puppy/Templates/layout.html
+++ b/puppy/Templates/layout.html
@@ -33,7 +33,7 @@
           </ul>
           <ul class="pull-right">
             <li><a href="{{url_for('puppyList')}}">Puppies</a></li>
-            <li><a href="#">Shelters</a></li>
+            <li><a href="{{url_for('shelterList')}}">Shelters</a></li>
             <li><a href="#">Owners</a></li>
           </ul>
         </div>
