--- a/puppy/Templates/shelterlist.html
+++ b/puppy/Templates/shelterlist.html
@@ -26,7 +26,7 @@
 			<div class="col-md-4">
 
 				<div class = 'nameAndPrice'>
-					<p>{{i.id}} <a href="{{i.website}}">{{i.name}}</a></p>
+					<h2>{{i.id}} <a href="{{i.website}}">{{i.name}}</a></h2>
 					<p>{{i.address}}</p>
 					<p>{{i.city}}, {{i.state}} {{i.zipCode}}</p>
 					<p>{{i.email}}</p>
