feat: Add /adopter/one/# and /adopter/add with adopterone.html and adopteradd.html fix: Change shelter reference to adopter reference in adopterlist.html

--- a/puppy/Templates/adopterlist.html
+++ b/puppy/Templates/adopterlist.html
@@ -33,8 +33,8 @@
 				</div>
 
 				<div class = "editdeletepane">
-					<a href='{{url_for('shelterEdit', adopter_id=i.id) }}' >Edit</a> 
-					<a href='{{url_for('shelterDelete', adopter_id=i.id) }}' >Delete</a> 
+					<a href='{{url_for('adopterEdit', adopter_id=i.id) }}' >Edit</a> 
+					<a href='{{url_for('adopterDelete', adopter_id=i.id) }}' >Delete</a> 
 				</div>
 			</div>
 		{% endfor %}
